Leverage the single-connection and connection-inversion features of Server version 7.4.
(cherry picked from commit f78f0f825ae2713e0bcf46e1da5846d68f44dc93)